<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:labelFor="@id/username_field"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/username_field"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:autofillHints=""
            android:inputType="text"
            android:maxLength="20"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@id/username_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_label"
            app:layout_constraintWidth_max="256dp" />

        <TextView
            android:id="@+id/club_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/club"
            android:labelFor="@id/club_field"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_field" />

        <EditText
            android:id="@+id/club_field"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:autofillHints=""
            android:inputType="text"
            android:maxLength="5"
            app:layout_constraintLeft_toLeftOf="@id/club_label"
            app:layout_constraintTop_toBottomOf="@id/club_label"/>

        <Switch
            android:id="@+id/side_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:showText="true"
            android:text="@string/side"
            android:textOff="@string/blue"
            android:textOn="@string/red"
            app:layout_constraintBottom_toBottomOf="@id/club_field"
            app:layout_constraintLeft_toRightOf="@id/club_field"
            app:layout_constraintTop_toTopOf="@id/club_field" />

        <TextView
            android:id="@+id/spell_left_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/spell_left"
            android:labelFor="@id/spell_left_spinner"
            app:layout_constraintTop_toBottomOf="@id/club_field"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Spinner
            android:id="@+id/spell_left_spinner"
            android:layout_width="96dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@id/spell_left_label"
            app:layout_constraintLeft_toLeftOf="@id/spell_left_label" />

        <ImageView
            android:id="@+id/spell_left_preview"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toRightOf="@id/spell_left_spinner"
            app:layout_constraintTop_toTopOf="@id/spell_left_spinner"
            app:layout_constraintBottom_toBottomOf="@id/spell_left_spinner"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/spell_right_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/spell_right"
            android:labelFor="@id/spell_left_spinner"
            app:layout_constraintTop_toTopOf="@id/spell_left_label"
            app:layout_constraintLeft_toRightOf="@id/spell_left_preview" />

        <Spinner
            android:id="@+id/spell_right_spinner"
            android:layout_width="96dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@id/spell_right_label"
            app:layout_constraintLeft_toLeftOf="@id/spell_right_label" />

        <ImageView
            android:id="@+id/spell_right_preview"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toRightOf="@id/spell_right_spinner"
            app:layout_constraintTop_toTopOf="@id/spell_right_spinner"
            app:layout_constraintBottom_toBottomOf="@id/spell_right_spinner"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/champion_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/champion"
            android:labelFor="@id/champion_spinner"
            app:layout_constraintTop_toBottomOf="@id/spell_left_spinner"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Spinner
            android:id="@+id/champion_spinner"
            android:layout_width="164dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@id/champion_label"
            app:layout_constraintLeft_toLeftOf="@id/champion_label" />

        <ImageView
            android:id="@+id/champion_preview"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toRightOf="@id/champion_spinner"
            app:layout_constraintTop_toTopOf="@id/champion_spinner"
            app:layout_constraintBottom_toBottomOf="@id/champion_spinner"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/skin_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/skin"
            android:labelFor="@id/skin_spinner"
            app:layout_constraintTop_toBottomOf="@id/champion_spinner"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Spinner
            android:id="@+id/skin_spinner"
            android:layout_width="256dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@id/skin_label"
            app:layout_constraintLeft_toLeftOf="@id/skin_label" />

        <ImageView
            android:id="@+id/skin_preview"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toRightOf="@id/skin_spinner"
            app:layout_constraintTop_toTopOf="@id/skin_spinner"
            app:layout_constraintBottom_toBottomOf="@id/skin_spinner"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/icon_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/icon"
            android:labelFor="@id/icon_field"
            app:layout_constraintTop_toBottomOf="@id/skin_spinner"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/icon_field"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:autofillHints=""
            android:digits="0123456789"
            android:inputType="number"
            android:maxLength="4"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="@id/icon_label"
            app:layout_constraintTop_toBottomOf="@id/icon_label" />

        <ImageView
            android:id="@+id/icon_preview"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toRightOf="@id/icon_field"
            app:layout_constraintTop_toTopOf="@id/icon_field"
            app:layout_constraintBottom_toBottomOf="@id/icon_field"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/rune_primary_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/rune_primary"
            android:labelFor="@id/rune_primary_spinner"
            app:layout_constraintTop_toBottomOf="@id/icon_field"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Spinner
            android:id="@+id/rune_primary_spinner"
            android:layout_width="96dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@id/rune_primary_label"
            app:layout_constraintLeft_toLeftOf="@id/rune_primary_label" />

        <ImageView
            android:id="@+id/rune_primary_preview"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toRightOf="@id/rune_primary_spinner"
            app:layout_constraintTop_toTopOf="@id/rune_primary_spinner"
            app:layout_constraintBottom_toBottomOf="@id/rune_primary_spinner"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/rune_secondary_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/rune_secondary"
            android:labelFor="@id/rune_secondary_spinner"
            app:layout_constraintTop_toTopOf="@id/rune_primary_label"
            app:layout_constraintLeft_toRightOf="@id/rune_primary_preview" />

        <Spinner
            android:id="@+id/rune_secondary_spinner"
            android:layout_width="96dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@id/rune_secondary_label"
            app:layout_constraintLeft_toLeftOf="@id/rune_secondary_label" />

        <ImageView
            android:id="@+id/rune_secondary_preview"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toRightOf="@id/rune_secondary_spinner"
            app:layout_constraintTop_toTopOf="@id/rune_secondary_spinner"
            app:layout_constraintBottom_toBottomOf="@id/rune_secondary_spinner"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/draw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/generate"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="generateLoadingScreenUser"
            app:layout_constraintTop_toBottomOf="@id/rune_primary_spinner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>